--- a/designs/main.html
+++ b/designs/main.html
@@ -69,7 +69,7 @@
               <div class="flex justify-between items-center">
                   <div class="space-y-2">
                       <p class="text-[#0F172A]">Session: Afternoon Session</p>
-                      <p class="text-[#189543] text-xl font-geist">15:45</p>
+                      <p class="text-[#F8FAFC] text-xl font-geist">15:45</p>
                       <p class="text-[#0F172A]">Description: Session Break</p>
                   </div>
                   <button class="bg-[#DA231C] text-[#F8FAFC] px-6 py-3 rounded hover:bg-[#B71C1C] transition-colors">
