--- a/designs/main.html
+++ b/designs/main.html
@@ -12,7 +12,7 @@
       .font-sofia { font-family: 'Sofia Sans', sans-serif; }
       .font-playfair { font-family: 'Playfair Display', serif; }
       .font-geist { font-family: 'Geist Mono', monospace; }
-      .bg-image { background: url('./bg.png')  no-repeat fixed center; }
+      .bg-image { background: url('./bg.png')  no-repeat fixed center; background-size: cover; }
     </style>
 </head>
 <body class="min-h-screen bg-[#E8F5E9] bg-image"> <!-- Changed to secondary-green for a softer background -->
