--- a/designs/main.html
+++ b/designs/main.html
@@ -18,9 +18,9 @@
 <body class="min-h-screen bg-[#E8F5E9] bg-image"> <!-- Changed to secondary-green for a softer background -->
    <!-- Add some background elements for depth -->
   <div class="absolute inset-0 z-0">
-    <div class="absolute top-20 left-20 w-96 h-96 bg-[#1FB954] rounded-full mix-blend-multiply filter blur-xl opacity-70"></div>
-    <div class="absolute bottom-20 right-20 w-96 h-96 bg-[#1B5E20] rounded-full mix-blend-multiply filter blur-xl opacity-70"></div>
-    <div class="absolute top-40 right-40 w-72 h-72 bg-[#189543] rounded-full mix-blend-multiply filter blur-xl opacity-70"></div>
+    <div class="absolute top-20 left-20 w-96 h-96 bg-[#1FB954]/20 rounded-full mix-blend-multiply filter blur-xl opacity-70"></div>
+    <div class="absolute bottom-20 right-20 w-96 h-96 bg-[#1B5E20]/20 rounded-full mix-blend-multiply filter blur-xl opacity-70"></div>
+    <div class="absolute top-40 right-40 w-72 h-72 bg-[#189543]/20 rounded-full mix-blend-multiply filter blur-xl opacity-70"></div>
   </div>
 
   <!-- Header -->
